Don't test OAC branch, must be in dsc-voro-djsite for it to work

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,8 @@ install:
 
 # command to run tests
 script: python test_project/manage.py test collection_record
+
+#test OAC branch from dsc-voro-djsite
+branches:
+    only:
+        - master
