Don't travis on OAC branch, test that from dsc-voro-djsite

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ python:
 # command to install dependencies
 install: 
   - "python setup.py install"
-  - "pip install https://github.com/drewyeaton/django-sortable/archive/master.zip#egg=django-sortable"
 
 # command to run tests
 script: python test_project/manage.py test collection_record
+
+#test OAC branch from dsc-voro-djsite
+branches:
+    only:
+        - master
